# network-installer

./: .editorconfig  .gitmodules  CMakeLists.txt  Makefile  README.md  juxt.cpp  juxt.hpp  main.cpp  task.hpp  util.hpp
assets/: README.md
assets/patches/: nn_olv.d.v15072.p1.bps  wave.d.v113.p1.bps
cert_patches/: cert_backup.cpp  cert_backup.hpp  cert_backup_strategy.cpp  cert_backup_strategy.hpp  cert_hashes.cpp  cert_hashes.hpp
ext/libbps/: CMakeLists.txt
ext/libbps/include/: flips_global.h  libbps.h
ext/libbps/source/: libbps.cpp
menu/: menu.cpp  menu.hpp  menu_done.cpp  menu_done.hpp  menu_loading.cpp  menu_loading.hpp  menu_miiverse_confirm.cpp  menu_miiverse_confirm.hpp
rpx_patches/: rpx_backup.cpp  rpx_backup.hpp  rpx_backup_strategy.cpp  rpx_backup_strategy.hpp  rpx_hashes.cpp  rpx_hashes.hpp  rpx_patch.cpp  rpx_patch.hpp
util/: copy_file.hpp  iosu_fs.cpp  iosu_fs.hpp  log.c  log.h  memory_streambuf.hpp  titles.cpp  titles.hpp  util.hpp
